// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modules /> should display spinner 1`] = `
<div>
  <h2>
    Modules
  </h2>
  <div
    class="spinner-wrapper my-3 text-center"
  >
    <div
      class="spinner-border"
      role="status"
    >
      <span
        class="sr-only"
      />
    </div>
  </div>
</div>
`;

exports[`<Modules /> should handle error on fetching modules 1`] = `
<div>
  <h2>
    Modules
  </h2>
  <p
    class="text-center text-danger"
  >
    An error occurred while fetching data.
  </p>
</div>
`;

exports[`<Modules /> should render modules 1`] = `
<div>
  <h2>
    Modules
  </h2>
  <p>
    Select modules which you want to include in the report.
  </p>
  <form
    class="container-fluid"
  >
    <div
      style="font-weight: bold;"
    >
      <div
        class="mb-3 form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="1"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="1"
        >
          Select all
        </label>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-sm-12 col-md-6 col-lg-4"
      >
        <div
          class="mb-3 form-check"
        >
          <input
            checked=""
            class="form-check-input"
            id="2"
            type="checkbox"
          />
          <label
            class="form-check-label"
            for="2"
          >
            foo_module
          </label>
          <div
            class="form-text"
          >
            <small>
              Boo module description.
            </small>
          </div>
        </div>
      </div>
      <div
        class="col-sm-12 col-md-6 col-lg-4"
      >
        <div
          class="mb-3 form-check"
        >
          <input
            checked=""
            class="form-check-input"
            id="3"
            type="checkbox"
          />
          <label
            class="form-check-label"
            for="3"
          >
            bar_module
          </label>
          <div
            class="form-text"
          >
            <small>
              Bar module description.
            </small>
          </div>
        </div>
      </div>
      <div
        class="col-sm-12 col-md-6 col-lg-4"
      >
        <div
          class="mb-3 form-check"
        >
          <input
            checked=""
            class="form-check-input"
            id="4"
            type="checkbox"
          />
          <label
            class="form-check-label"
            for="4"
          >
            fizz_module
          </label>
          <div
            class="form-text"
          >
            <small>
              Fizz module description.
            </small>
          </div>
        </div>
      </div>
      <div
        class="col-sm-12 col-md-6 col-lg-4"
      >
        <div
          class="mb-3 form-check"
        >
          <input
            checked=""
            class="form-check-input"
            id="5"
            type="checkbox"
          />
          <label
            class="form-check-label"
            for="5"
          >
            buzz_module
          </label>
          <div
            class="form-text"
          >
            <small>
              Buzz module description.
            </small>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col-sm-12 col-lg-12 p-0 mb-3 text-end"
    >
      <button
        class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
        data-testid="generate-report-button"
        type="submit"
      >
        <span>
          Generate report
        </span>
      </button>
    </div>
  </form>
</div>
`;
